# BestPractice2

./: .gitignore  AboutBoxX.cpp  AboutBoxX.dfm  AboutBoxX.h  CMakeLists.txt  CWSOLA.cpp  CWSOLA.h  IIRButter.cpp  IIRButter.h  LangForm.cpp  LangForm.dfm  LangForm.h  MODERNIZATION.md  Main.cpp  Main.dfm  Main.h  ProgressForm.cpp  ProgressForm.dfm  ProgressForm.h  README.md  SampleData.cpp  SampleData.h  SecondOrderSection.cpp  SecondOrderSection.h  TCDTrackReader.cpp  TCDTrackReader.h  THIRD_PARTY_NOTICES.txt  TKaraokeProcessor.cpp  TKaraokeProcessor.h  TMP3Reader.cpp  TMP3Reader.h  TQMFBank.cpp  TQMFBank.h  TReader.cpp  TReader.h  TResampler.cpp  TResampler.h  TWaveReader.cpp  TWaveReader.h  WinXP.manifest  (+15 more)
help/: bppopup.shp
htmlhelp/: bp.sh5
lang/da/: default.po
lang/de/: default.po
lang/es/: default.po
lang/fr/: default.po
lang/it/: default.po
lang/ja/: default.po
lang/nl/: default.po
lang/pt_BR/: default.po
lang/ru/: default.po
lang/sv/: default.po
lang/zh_TW/: default.po
qt/: AboutDialog.cpp  AboutDialog.h  AudioEngine.cpp  AudioEngine.h  BestPractice.rc.in  LanguageDialog.cpp  LanguageDialog.h  MainWindow.cpp  MainWindow.h  ProgressDialog.cpp  ProgressDialog.h  help.html  main.cpp  resources.qrc  theme.qss
tools/: audio_engine_smoke.cpp  core_smoke.cpp  generate_icon.ps1
